# Medex

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  RELEASE_GUIDE.md  THEME_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.ts  version.properties
.github/workflows/: main.yml
doc/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKREF.md  MACOS_SIGNING_GUIDE.md  PRODUCT.md  QUICK_VERSION_REFERENCE.md  VERSION_MANAGEMENT.md
repowiki/zh/meta/: repowiki-metadata.json
scripts/: deploy.js  sync-version.js  sync-version.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs
src-tauri/src/db/: mod.rs
src-tauri/src/services/: mod.rs  scanner.rs  security.rs  tags.rs
src-tauri/src/thumbnail/: manager.rs  mod.rs  queue.rs  utils.rs  worker.rs
src/components/: Inspector.tsx  Main.tsx  MediaCard.tsx  MediaCardContextMenu.tsx  MediaGrid.tsx  MediaViewer.tsx  Sidebar.tsx  TagDragOverlay.tsx  TagItem.tsx  Toolbar.tsx
src/containers/: InspectorContainer.tsx  MediaGridContainer.tsx  SidebarContainer.tsx  ToolbarContainer.tsx
src/contexts/: I18nContext.tsx  ThemeContext.tsx
src/i18n/: en-US.json  zh-CN.json
src/pages/: Settings.tsx  Update.tsx  UpdatePage.tsx  index.tsx
src/pages/views/: AvailableView.tsx  CheckingView.tsx  DownloadingView.tsx  ErrorView.tsx  IdleView.tsx  LatestView.tsx  ReadyView.tsx  index.ts
src/store/: useAppStore.ts  useTagDragStore.ts
src/theme/: theme.ts
(+126 files in other folders)
