[package]
name = "medex"
version = "0.8.6"
description = "Medex desktop app"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1.20"
anyhow = "1.0"
walkdir = "2.5"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
